--- a/config.yaml
+++ b/config.yaml
@@ -6,11 +6,11 @@
 ACADEMIC_ACCESS: True
 
 # Twitter API credentials. ** REPLACE ME **
-CONSUMER_KEY: "<REPLACE_ME>"
-CONSUMER_SECRET: "<REPLACE_ME>"
-ACCESS_TOKEN: "<REPLACE_ME>"
-ACCESS_SECRET: "<REPLACE_ME>"
-BEARER_TOKEN: "<REPLACE_ME>"
+CONSUMER_KEY: "kKn123rkeNbmBCkGssDUAWpYv"
+CONSUMER_SECRET: "4dcpxjleTc8AA9r62rG4Mgk3xxK2lcypBiCy9F9KkVsYa9cOVC"
+ACCESS_TOKEN: "1724693088428498944-t0ptJgGFoDDcSgn3VBfLqsMQpuzroR"
+ACCESS_SECRET: "vxVyAlv21pIFA1n3EcVuAOEAQ2lopR9CtnIL5HtEjhXrL"
+BEARER_TOKEN: "AAAAAAAAAAAAAAAAAAAAAM9VrAEAAAAAP0yiWvyxncvpWLIE%2B%2F8TTL13Wig%3DWJlYSmtBOK7bt76NYTXlTmMcRljnmP3n34ZV3jrSQ0uwVP9XrN"
 
 # Initial query path and save path.
 INIT_PATH: "query.json"
