--- a/config.yaml
+++ b/config.yaml
@@ -28,7 +28,7 @@ EXPANSIONS: ["author_id"]
 # Time period.
 # For 'General' access, you can search for the last 7 days only.
 # To search for full-archive tweets, 'Academic Research' access is required.
-START_TIME: "2015-04-18T00:00:00Z"
+START_TIME: "2014-04-18T00:00:00Z"
 END_TIME: "2018-04-24T00:00:00Z"
 
 # Crawl limit for seed tweets.
@@ -36,20 +36,20 @@ INIT_MAX_RESULTS: 10      # Max results for each page.
 INIT_LIMIT: 1             # Paginator page.
 
 # Crawl limit for `follow` interactions.
-FOLLOWING_MAX_RESULTS: 5  # Max results for each page.
-FOLLOWING_LIMIT: 1        # Paginator page.
+# FOLLOWING_MAX_RESULTS: 5  # Max results for each page.
+# FOLLOWING_LIMIT: 1        # Paginator page.
 
 # Crawl limit for `post` interactions.
-POST_MAX_RESULTS: 10      # Max results for each page.
-POST_LIMIT: 1             # Paginator page.
+# POST_MAX_RESULTS: 10      # Max results for each page.
+# POST_LIMIT: 1             # Paginator page.
 
 # Crawl limit for `retweet` interactions.
-RETWEET_MAX_RESULTS: 10   # Max results for each page.
-RETWEET_LIMIT: 1          # Paginator page.
+# RETWEET_MAX_RESULTS: 10   # Max results for each page.
+# RETWEET_LIMIT: 1          # Paginator page.
 
 # Crawl limit for `like` interactions.
-LIKE_MAX_RESULTS: 5       # Max results for each page.
-LIKE_LIMIT: 1             # Paginator page.
+# LIKE_MAX_RESULTS: 5       # Max results for each page.
+# LIKE_LIMIT: 1             # Paginator page.
 
 # Sleep to avoid rate limit (Tweepy docs: https://bit.ly/3L5qxbA).
 SLEEP_TIME: 1
