--- a/config.yaml
+++ b/config.yaml
@@ -36,20 +36,20 @@ INIT_MAX_RESULTS: 10      # Max results for each page.
 INIT_LIMIT: 1             # Paginator page.
 
 # Crawl limit for `follow` interactions.
-# FOLLOWING_MAX_RESULTS: 5  # Max results for each page.
-# FOLLOWING_LIMIT: 1        # Paginator page.
+FOLLOWING_MAX_RESULTS: 5  # Max results for each page.
+FOLLOWING_LIMIT: 1        # Paginator page.
 
 # Crawl limit for `post` interactions.
-# POST_MAX_RESULTS: 10      # Max results for each page.
-# POST_LIMIT: 1             # Paginator page.
+POST_MAX_RESULTS: 10      # Max results for each page.
+POST_LIMIT: 1             # Paginator page.
 
 # Crawl limit for `retweet` interactions.
-# RETWEET_MAX_RESULTS: 10   # Max results for each page.
-# RETWEET_LIMIT: 1          # Paginator page.
+RETWEET_MAX_RESULTS: 10   # Max results for each page.
+RETWEET_LIMIT: 1          # Paginator page.
 
 # Crawl limit for `like` interactions.
-# LIKE_MAX_RESULTS: 5       # Max results for each page.
-# LIKE_LIMIT: 1             # Paginator page.
+LIKE_MAX_RESULTS: 5       # Max results for each page.
+LIKE_LIMIT: 1             # Paginator page.
 
 # Sleep to avoid rate limit (Tweepy docs: https://bit.ly/3L5qxbA).
 SLEEP_TIME: 1
